--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0"
+    "graphql": "^15.8.0",
+    "lodash": "^4.17.21"
   }
 }
