--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongoose": "^6.5.4"
   }
 }
