--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/server/node_modules/
+/client/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -69,7 +70,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-config.env
+/server/config.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
