--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Mironshoh1603/GraphQlBooks#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
